// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppGenerator > snapshots emitted TypeScript sources > application-controller.ts 1`] = `
"import { ActionController } from "@blazetrails/actionpack";

export class ApplicationController extends ActionController.Base {

}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > application-helper.ts 1`] = `
"export const ApplicationHelper = {
};
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > application-job.ts 1`] = `
"export class ApplicationJob {
  queueAs = "default";
}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > application-mailer.ts 1`] = `
"export class ApplicationMailer {
  defaultFrom = "from@example.com";

  layout = "mailer";
}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > application-record.ts 1`] = `
"import { ActiveRecord } from "@blazetrails/activerecord";

export class ApplicationRecord extends ActiveRecord.Base {

}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > channel.ts 1`] = `
"export class Channel {

}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > config.ts 1`] = `
"// This file is used by Rack-based servers to start the application.
import { Trails } from "@blazetrails/trailties";

import "./config/environment.js";

export default Trails.application;

Trails.application.loadServer();
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > config/application.ts 1`] = `
"import { Application } from "@blazetrails/trailties";

export class MyApp extends Application {
  static {
    // Initialize configuration defaults for originally generated trails version.
    this.config.loadDefaults("8.0");
  }

  // Configuration for the application, engines, and trailties goes here.
  //
  // These settings can be overridden in specific environments using the files
  // in config/environments, which are processed later.
  //
  // config.timeZone = "Central Time (US & Canada)";
  // config.eagerLoadPaths.push("extras");
  // config
}

Application.register(MyApp);
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > config/cable.ts 1`] = `
"export default {
  development: {
    adapter: "async",
  },
  test: {
    adapter: "test",
  },
  production: {
    adapter: "redis",
    url: process.env.REDIS_URL || "redis://localhost:6379/1",
  },
};
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > config/routes.ts 1`] = `
"import type { Mapper } from "@blazetrails/actionpack";

export function drawRoutes(mapper: Mapper): void {
  // Define your application routes here.
  // Example:
  //   mapper.get("/posts", { to: "posts#index" });

  // Defines the root path route ("/")
  // mapper.root("posts#index");
  // routes
}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > config/storage.ts 1`] = `
"export default {
  local: {
    service: "Disk",
    root: "storage",
  },
  test: {
    service: "Disk",
    root: "tmp/storage",
  },
};
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > connection.ts 1`] = `
"export class Connection {

}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > environments/development.ts 1`] = `
"export default {
  cacheClasses: false,
  eagerLoad: false,
  considerAllRequestsLocal: true,
  serverTiming: true,
  cacheStore: "memory",
  // config
};
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > environments/production.ts 1`] = `
"export default {
  cacheClasses: true,
  eagerLoad: true,
  considerAllRequestsLocal: false,
  forceSSL: true,
  logLevel: "info",
  cacheStore: "memory",
  // config
};
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > environments/test.ts 1`] = `
"export default {
  cacheClasses: true,
  eagerLoad: false,
  considerAllRequestsLocal: true,
  cacheStore: "null",
  // config
};
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > test-helper.ts 1`] = `
"// Test helper — loaded before all test files.
import { ActiveRecord } from "@blazetrails/activerecord";

export async function setupTestDatabase(): Promise<void> {
  // Configure test database connection
}
"
`;

exports[`AppGenerator > snapshots emitted TypeScript sources > vite.config.ts 1`] = `
"import { fileURLToPath } from "node:url";
import { defineConfig } from "vite";

export default defineConfig({
  root: "app",
  // The app's static files under public/ are served by the Rack stack, not
  // copied into the build — public/assets is written by the pipeline, the
  // rest of public/ is hand-maintained.
  publicDir: false,
  build: {
    outDir: "../public/assets",
    assetsDir: ".",
    emptyOutDir: true,
    manifest: true,
    rollupOptions: {
      input: {
        application: fileURLToPath(
          new URL("app/assets/stylesheets/application.css", import.meta.url),
        ),
      },
    },
  },
});
"
`;
